syntax = "proto3";

package ecosort.classification;

message ImageChunk {
  bytes data = 1;
}

message ClassificationResult {
  int32 class_id = 1;
  string class_name = 2;
  float confidence = 3;
}

service ClassificationService {
  rpc ClassifyStream(stream ImageChunk) returns (ClassificationResult);
}