syntax = "proto3";

package ecosort;

option java_multiple_files = true;
option java_package = "br.com.unicuritiba.ecosort";
option java_outer_classname = "AiClassificationProto";

message AiClassificationRequest {
  bytes data = 1;
}

message AiClassificationResponse {
  int32 class_id = 1;
  string class_name = 2;
  float confidence = 3;
}

service AiClassificationService {
  rpc AiClassification (AiClassificationRequest) returns (AiClassificationResponse);
}